--- a/src/components/checkbox-group/checkbox-group.module.css
+++ b/src/components/checkbox-group/checkbox-group.module.css
@@ -1,7 +1,7 @@
 .CheckboxGroup {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   gap: 0.45rem;
   color: rgb(var(--text-color));
 }
