--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -14,7 +14,7 @@
     line-height: 1.5rem;
     user-select: none;
     cursor: pointer;
-    transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    transition: opacity 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 
     &:focus-visible {
         outline: 2px solid rgb(var(--primary-color));
@@ -39,7 +39,7 @@
     border: 1px solid rgb(var(--primary-color));
 
     &:hover {
-        opacity: 0.9;
+        opacity: 0.8;
     }
 
     &:active {
